--- a/dev/index.html
+++ b/dev/index.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <title>INTITA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='//fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
 
-
-    <link href="http://robotamolodi.org/css/app.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/featherlight.min.css"/>
     <link type="text/css" rel="stylesheet" href="css/featherlight.gallery.min.css"/>
     <link rel="stylesheet" href="css/style.css">
@@ -791,8 +789,8 @@
 <!--- footer block the end-->
 
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="js/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/featherlight.gallery.min.js" type="text/javascript" charset="utf-8"></script>
 
